fixed css for sizing of abstract and bibtex boxes on small screens

--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -41,7 +41,7 @@ body {padding-top: 40px;}
    border-width: 1px;
    border-color: #ffffff;
    z-index: 200;
-   width:400px;
+   width:320px;
    line-height: 125%;
    visibility: hidden;
    opacity: 1;
@@ -81,7 +81,7 @@ body {padding-top: 40px;}
    left:0px;
    padding: 0px;
    margin: 0px;
-   width:200px;
+   width:230px;
    height: auto;
    color: #ddd;
    padding: 10px;
